[tool.poetry]
name = "sphinx-babel"
version = "0.1.0"
description = "Sphinx extensions to cope with multi-language projects"
license = "Apache-2.0"
authors = [
    "Michel Hidalgo <michel@ekumenlabs.com>",
]
maintainers = ["Michel Hidalgo <michel@ekumenlabs.com>"]
readme = "README.md"
packages = [{ include = "sphinx_babel", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Other",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
sphinx = ">=6.2"
# doxysphinx = "^3.3.7"
doxysphinx = { url = "https://github.com/Ekumen-OS/doxysphinx/archive/660a201fa0283040475e74609212b7af47ea9fd4.zip" }  # branch = fix-dark-mode

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8"
types-setuptools = "^69.5"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
